<resources>
    <string name="app_name">Controller_test</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="title_activity_connected">ConnectedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="model_label">Model</string>
    <string name="model_value">model_value</string>
    <string name="serial_number_label">Serial_number</string>
    <string name="serial_number_value">000000</string>
    <string name="hardware_label">Hardware revision</string>
    <string name="hardware_value">00</string>
    <string name="firmware_label">Firmware revision</string>
    <string name="firmware_value">00</string>
    <string name="manufacturer_label">Manufacturer</string>
    <string name="manufacturer_value">Antrax</string>
    <string name="action_search">search</string>
    <string name="btn_toolbar">switch_connect</string>
    <string name="logo_description">Antrax</string>
    <string name="action_about">About</string>
    <string name="refresh_string">Refresh</string>
</resources>
