<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.controller.InfoFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_label"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_value"
        android:textStyle="bold"
        android:id="@+id/model_text"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignEnd="@+id/manufacturer_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer_label"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manufacturer_value"
        android:textStyle="bold"
        android:id="@+id/manufacturer_text"
        android:layout_marginEnd="27dp"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_number_label"
        android:id="@+id/textView10"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial_number_value"
        android:textStyle="bold"
        android:id="@+id/sn_text"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignEnd="@+id/model_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardware_label"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardware_value"
        android:textStyle="bold"
        android:id="@+id/hw_text"
        android:layout_above="@+id/textView5"
        android:layout_alignEnd="@+id/model_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firmware_label"
        android:id="@+id/textView5"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firmware_value"
        android:textStyle="bold"
        android:id="@+id/fw_text"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignStart="@+id/hw_text" />

</RelativeLayout>
