<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.controller.ConnectedActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/btn_toolbar"
        android:icon="@drawable/ic_check_circle_white_24dp"
        android:orderInCategory="200"
        android:title="@string/btn_toolbar"
        app:showAsAction="always" />

    <item android:id="@+id/action_refresh"
        android:orderInCategory="300"
        android:title="@string/refresh_string"
        app:showAsAction="never" />
</menu>
